Update conf file

--- a/conf.ini
+++ b/conf.ini
@@ -24,7 +24,7 @@ gnomAD=0.98
 HEADER_CNV = ['MYCL','NRAS','MDM4','MYCN','ALK','RAF1','PIK3CB','PIK3CA','TFRC','FGFR3','PDGFRA','KIT','FGF5','FGF2','RICTOR','FGF10','FGF1','PDGFRB','FGFR4','CCND3','ESR1','EGFR','CDK6','MET','BRAF','NRG1','FGFR1','MYC','JAK2','RET','PTEN','FGF8','FGFR2','CCND1','FGF19','FGF4','FGF3','ATM','CHEK1','FGF23','FGF6','KRAS','ERBB3','CDK4','MDM2','FGF9','BRCA2','FGF14','LAMP1','FGF7','ERBB2','BRCA1','RPS6KB1','CCNE1','AKT2','ERCC2','ERCC1','CHEK2','AR']
 
 [TMB]
-THRESHOLD= {'Low (<= 5)':'5','Medium (5< x <10)':'10','High (>=10)':'10'}
+THRESHOLD= {'Low (< 5)':'5','Medium (5< x <10)':'10','High (>=10)':'10'}
 
 [MSI]
 THRESHOLD=20
