--- a/conf.ini
+++ b/conf.ini
@@ -1,12 +1,12 @@
 [Paths]
 OUTPUT_FILTERED = snv_filtered
 OUTPUT_MAF = maf
-VCF2MAF = /data/hpc-data/shared/pipelines/varan-2.0/vcf2maf/vcf2maf.pl
+VCF2MAF = /Users/lorenzodemarco/Desktop/varan_env/bin/vcf2maf.pl
 #REF_FASTA = /data/hpc-data/shared/pipelines/varan/vep_db/GRCh37/vep/homo_sapiens/104_GRCh37/Homo_sapiens.GRCh37.75.dna.primary_assembly.fa
-REF_FASTA = /apps/trusight/2.2.0/resources/genomes/hg19_hardPAR/genome.fa
+REF_FASTA = /Users/lorenzodemarco/Desktop/varan_env/vep_db/genome.fa
 TMP = scratch
-VEP_PATH = /data/hpc-data/shared/pipelines/varan/varan_env/share/ensembl-vep-104.3-1/
-VEP_DATA = /data/hpc-data/shared/pipelines/varan/vep_db/GRCh37/vep/
+VEP_PATH = /Users/lorenzodemarco/Desktop/varan_env/bin
+VEP_DATA =/Users/lorenzodemarco/Desktop/varan_env/vep_db/GRCh37/vep/
 
 [Project]
 PROJECT_NAME=fpg500
@@ -27,4 +27,4 @@ HEADER_CNV = ['MYCL','NRAS','MDM4','MYCN','ALK','RAF1','PIK3CB','PIK3CA','TFRC',
 THRESHOLD= {'Low (< 5)':'5','Medium (5< x <10)':'10','High (>=10)':'10'}
 
 [MSI]
-THRESHOLD=20
+THRESHOLD=0.2
