Change TMB MSI functions

--- a/conf.ini
+++ b/conf.ini
@@ -7,6 +7,8 @@ REF_FASTA = /Users/lorenzodemarco/Desktop/varan_env/vep_db/genome.fa
 TMP = scratch
 VEP_PATH = /Users/lorenzodemarco/Desktop/varan_env/bin
 VEP_DATA =/Users/lorenzodemarco/Desktop/varan_env/vep_db/GRCh37/vep/
+CLINV= 
+#/home/00661793/Varan_DEV/varan-1.0/vep/ftp.ncbi.nlm.nih.gov/pub/clinvar/vcf_GRCh37/clinvar_20231015.vcf.gz,ClinVar,vcf,exact,0,CLNSIG
 
 [Project]
 PROJECT_NAME=fpg500
@@ -27,4 +29,4 @@ HEADER_CNV = ['MYCL','NRAS','MDM4','MYCN','ALK','RAF1','PIK3CB','PIK3CA','TFRC',
 THRESHOLD= {'Low (< 5)':'5','Medium (5< x <10)':'10','High (>=10)':'10'}
 
 [MSI]
-THRESHOLD=0.2
+THRESHOLD=20
