--- a/conf.ini
+++ b/conf.ini
@@ -1,17 +1,12 @@
 [Paths]
 OUTPUT_FILTERED = snv_filtered
 OUTPUT_MAF = maf
-VCF2MAF =/data/hpc-data/shared/pipelines/varan-2.0/vcf2maf/vcf2maf.pl
-# /Users/lorenzodemarco/Desktop/varan_env/bin/vcf2maf.pl
-#REF_FASTA = /data/hpc-data/shared/pipelines/varan/vep_db/GRCh37/vep/homo_sapiens/104_GRCh37/Homo_sapiens.GRCh37.75.dna.primary_assembly.fa
-REF_FASTA = /apps/trusight/2.2.0/resources/genomes/hg19_hardPAR/genome.fa
-#/Users/lorenzodemarco/Desktop/varan_env/vep_db/genome.fa
+VCF2MAF = <absolute path to vcf2maf>
+REF_FASTA = <absolute path to ref genome>
 TMP = scratch
-VEP_PATH = /data/hpc-data/shared/pipelines/varan/varan_env/share/ensembl-vep-104.3-1/
-VEP_DATA = /data/hpc-data/shared/pipelines/varan/vep_db/GRCh37/vep/
-#VEP_PATH = /Users/lorenzodemarco/Desktop/varan_env/bin
-#VEP_DATA =/Users/lorenzodemarco/Desktop/varan_env/vep_db/GRCh37/vep/
-CLINV=/home/00661793/Varan_DEV/varan-1.0/vep/ftp.ncbi.nlm.nih.gov/pub/clinvar/vcf_GRCh37/clinvar_20231015.vcf.gz,ClinVar,vcf,exact,0,CLNSIG
+VEP_PATH = <absolute path to vep>
+VEP_DATA = <absolute path to vep data >
+CLINV= <absolute path to vep data > + ClinVar,vcf,exact,0,CLNSIG
 
 [Project]
 PROJECT_NAME=fpg500
